--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="https://example.com/images/favicon.png" />
+<link rel="shortcut icon" href="https://weberress.github.io/myfirsthugo.io/images/favicon.png" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
@@ -15,14 +15,14 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Hugo &#43; Bear = :heart:" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.com/404.html" />
-<meta property="og:image" content="https://example.com/images/share.png"/>
+<meta property="og:url" content="https://weberress.github.io/myfirsthugo.io/404.html" />
+<meta property="og:image" content="https://weberress.github.io/myfirsthugo.io/images/share.png"/>
 <meta property="og:site_name" content="Weber ʕ•ᴥ•ʔ Bear" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://example.com/images/share.png"/>
+<meta name="twitter:image" content="https://weberress.github.io/myfirsthugo.io/images/share.png"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Hugo &#43; Bear = :heart:"/>
@@ -200,17 +200,17 @@
 </head>
 
 <body>
-  <header><a href="/" class="title">
+  <header><a href="/myfirsthugo.io/" class="title">
   <h2>WEBER ʕ•ᴥ•ʔ Bear Blog</h2>
 </a>
-<nav><a href="/">Home</a>
+<nav><a href="/myfirsthugo.io/">Home</a>
 
-<a href="/bear/">Bear</a>
+<a href="/myfirsthugo.io/bear/">Bear</a>
 
-<a href="/hugo/">Hugo</a>
+<a href="/myfirsthugo.io/hugo/">Hugo</a>
 
 
-<a href="/blog">Blog</a>
+<a href="/myfirsthugo.io/blog">Blog</a>
 
 </nav>
 </header>
