--- a/bear/index.html
+++ b/bear/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="https://example.com/images/favicon.png" />
+<link rel="shortcut icon" href="https://weberress.github.io/myfirsthugo.io/images/favicon.png" />
 <title>Bear | WEBER ʕ•ᴥ•ʔ Bear Blog</title>
 <meta name="title" content="Bear" />
 <meta name="description" content="Bear Website: https://bearblog.dev
@@ -21,14 +21,14 @@ There is a website obesity crisis. Bloated websites are full of scripts, ads, an
 Bear is all you need to build a fantastic and optimized site or blog. It works perfectly on any viewing device. All you need to focus on is writing good content.
 Bear makes it simple to publish content online and grow an audience while keeping pages tiny, fast, and optimized for search engines." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://example.com/bear/" />
-<meta property="og:image" content="https://example.com/images/share.png"/>
+<meta property="og:url" content="https://weberress.github.io/myfirsthugo.io/bear/" />
+<meta property="og:image" content="https://weberress.github.io/myfirsthugo.io/images/share.png"/>
 <meta property="og:site_name" content="Weber ʕ•ᴥ•ʔ Bear" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://example.com/images/share.png"/>
+<meta name="twitter:image" content="https://weberress.github.io/myfirsthugo.io/images/share.png"/>
 
 <meta name="twitter:title" content="Bear"/>
 <meta name="twitter:description" content="Bear Website: https://bearblog.dev
@@ -45,7 +45,7 @@ Bear is all you need to build a fantastic and optimized site or blog. It works p
 Bear makes it simple to publish content online and grow an audience while keeping pages tiny, fast, and optimized for search engines.">
 
 <meta itemprop="wordCount" content="94">
-<meta itemprop="image" content="https://example.com/images/share.png"/>
+<meta itemprop="image" content="https://weberress.github.io/myfirsthugo.io/images/share.png"/>
 
 
 
@@ -219,17 +219,17 @@ Bear makes it simple to publish content online and grow an audience while keepin
 </head>
 
 <body>
-  <header><a href="/" class="title">
+  <header><a href="/myfirsthugo.io/" class="title">
   <h2>WEBER ʕ•ᴥ•ʔ Bear Blog</h2>
 </a>
-<nav><a href="/">Home</a>
+<nav><a href="/myfirsthugo.io/">Home</a>
 
-<a href="/bear/">Bear</a>
+<a href="/myfirsthugo.io/bear/">Bear</a>
 
-<a href="/hugo/">Hugo</a>
+<a href="/myfirsthugo.io/hugo/">Hugo</a>
 
 
-<a href="/blog">Blog</a>
+<a href="/myfirsthugo.io/blog">Blog</a>
 
 </nav>
 </header>
